# recipes-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_tag_recipe_tags.py  0004_ingredient_recipe_ingredients.py
app/core/tests/: test_models.py  tests_admin.py
app/recipe/: serializers.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
